--- a/force-app/main/default/lwc/app/app.html
+++ b/force-app/main/default/lwc/app/app.html
@@ -1,10 +1,15 @@
 <template>
-    <div>
-      <div>Name: {name}</div>
-      <div>Description: {description}</div>
-      <div>Category: {category}</div>
-      <div>Material: {material}</div>
-      <div>Price: {price}</div>
-      <div><img src={pictureUrl}/></div>
-    </div>
-  </template>
+    <template lwc:if={ready}>
+        <div id="display">
+            <div>Name: {name}</div>
+            <div>Description: {description}</div>
+            <lightning-badge label={material}></lightning-badge>
+            <lightning-badge label={category}></lightning-badge>
+            <div>Price: {price}</div>
+            <div><img src={pictureUrl}/></div>
+        </div>
+    </template>
+    <template lwc:else>
+        <div id="waiting">Loading…</div>
+    </template>
+</template>
