--- a/force-app/main/default/lwc/videoPlayer/videoPlayer.html
+++ b/force-app/main/default/lwc/videoPlayer/videoPlayer.html
@@ -1,5 +1,8 @@
 <!-- videoPlayer.html -->
 <template>
+    <div>
+      <p>VideoURL = {videoUrl}</p>
+    </div>
     <div class="fancy-border">
       <video autoplay>
         <source src={videoUrl} type={videoType} />
