--- a/force-app/main/default/lwc/apexContactsForAccount/apexContactsForAccount.html
+++ b/force-app/main/default/lwc/apexContactsForAccount/apexContactsForAccount.html
@@ -1,19 +1,12 @@
 <template>
     <lightning-card title="Datatable Example" icon-name="custom:custom63">
-      <div class="slds-m-around_medium">
-        <template lwc:if={contacts.data}>
-          <lightning-datatable
-            key-field="Id"
-            data={contacts.data}
-            columns={columns}
-            onsave={handleSave}
-            draft-values={draftValues}
-          >
-          </lightning-datatable>
-        </template>
-        <template lwc:if={contacts.error}>
-          <!-- Handle Apex error -->
-        </template>
-      </div>
+        <div class="slds-m-around_medium">
+            <template lwc:if={contacts.data}>
+                <lightning-datatable key-field="Id" data={contacts.data} columns={columns} onsave={handleSave} draft-values={draftValues}></lightning-datatable>
+            </template>
+            <template lwc:if={contacts.error}>
+                <!-- Handle Apex error -->
+            </template>
+        </div>
     </lightning-card>
-  </template>
+</template>
