--- a/force-app/main/default/lwc/getContactName/getContactName.html
+++ b/force-app/main/default/lwc/getContactName/getContactName.html
@@ -1,13 +1,5 @@
 <template>
-        <div class="slds-m-around_medium">
-            <lightning-input-name
-                    label="Contact Name"
-                    first-name={firstname}
-                    last-name={lastname}
-                    salutation={salutation}
-                    options={salutations}
-                    class="slds-m-bottom_x-small"
-                    required>
-            </lightning-input-name>
-        </div>
+    <div class="slds-m-around_medium">
+        <lightning-input-name label="Contact Name" first-name={firstname} last-name={lastname} salutation={salutation} options={salutations} class="slds-m-bottom_x-small" required></lightning-input-name>
+    </div>
 </template>
