--- a/force-app/main/default/lwc/recordPickerHello/recordPickerHello.html
+++ b/force-app/main/default/lwc/recordPickerHello/recordPickerHello.html
@@ -1,24 +1,11 @@
 <template>
-    <lightning-card
-        title="RecordPickerHello"
-        class="slds-card__body_inner"
-        icon-name="standard:search">
+    <lightning-card title="RecordPickerHello" class="slds-card__body_inner" icon-name="standard:search">
         <div>
-            <lightning-record-picker
-                lwc:ref="recordPicker"
-                object-api-name="Contact"
-                placeholder="Search..."
-                label="Select a record"
-                onchange={handleChange}>
-            </lightning-record-picker>
+            <lightning-record-picker lwc:ref="recordPicker" object-api-name="Contact" placeholder="Search..." label="Select a record" onchange={handleChange}></lightning-record-picker>
         </div>
-
         <template if:true={contact}>
             <div class="slds-var-m-around_medium selectedRecordDetails">
-                <c-contact-tile
-                    class="slds-show slds-is-relative"
-                    contact={contact}>
-                </c-contact-tile>
+                <c-contact-tile class="slds-show slds-is-relative" contact={contact}></c-contact-tile>
             </div>
         </template>
         <template lwc:if={wireError}>
