--- a/force-app/main/default/lwc/remoteControl/remoteControl.html
+++ b/force-app/main/default/lwc/remoteControl/remoteControl.html
@@ -1,10 +1,5 @@
 <template>
     <lightning-card title="Remote Control" icon-name="action:change_record_type">
-        <c-controls
-          class="slds-show slds-is-relative"
-          onadd={handleIncrement}
-          onsubtract={handleDecrement}
-          onmultiply={handleMultiply}>
-        </c-controls>
-      </lightning-card>
+        <c-controls class="slds-show slds-is-relative" onadd={handleIncrement} onsubtract={handleDecrement} onmultiply={handleMultiply}></c-controls>
+    </lightning-card>
 </template>
