--- a/force-app/main/default/lwc/accountFinder/accountFinder.html
+++ b/force-app/main/default/lwc/accountFinder/accountFinder.html
@@ -1,20 +1,11 @@
 <template>
     <lightning-card>
-        <lightning-input
-            type="number"
-            formatter="currency"
-            label="Annual Revenue"
-            value={annualRevenue}
-            onchange={handleChange}>
-        </lightning-input>
-        <lightning-button
-            label="Reset"
-            onclick={reset}>
-        </lightning-button>
+        <lightning-input type="number" formatter="currency" label="Annual Revenue" value={annualRevenue} onchange={handleChange}></lightning-input>
+        <lightning-button label="Reset" onclick={reset}></lightning-button>
         <template lwc:if={accounts.data}>
             <template for:each={accounts.data} for:item="account">
-                 <p key={account.Id}>{account.Name}</p>
+                <p key={account.Id}>{account.Name}</p>
             </template>
         </template> 
     </lightning-card>
-  </template>
+</template>
