--- a/force-app/main/default/lwc/button/button.html
+++ b/force-app/main/default/lwc/button/button.html
@@ -1,8 +1,3 @@
 <template>
-    <lightning-button
-    label={label}
-    data-factor={label}
-    icon-name={icon}
-    onclick={handleButton}>
-  </lightning-button>
+    <lightning-button label={label} data-factor={label} icon-name={icon} onclick={handleButton}></lightning-button>
 </template>
