--- a/force-app/main/default/lwc/contactList/contactList.html
+++ b/force-app/main/default/lwc/contactList/contactList.html
@@ -1,12 +1,7 @@
 <template>
     <lightning-card>
         <template if:true={contacts.data}>
-            <lightning-datatable
-                key-field="Id"
-                data={contacts.data}
-                columns={columns}
-            >
-           </lightning-datatable>
+            <lightning-datatable key-field="Id" data={contacts.data} columns={columns}></lightning-datatable>
         </template>
         <template if:true={errors}>
             <p>{errors}</p>
