--- a/force-app/main/default/lwc/list/list.html
+++ b/force-app/main/default/lwc/list/list.html
@@ -1,11 +1,7 @@
 <template>
     <div class="container">
         <template for:each={bikes} for:item="bike">
-            <c-tile
-                key={bike.fields.Id.value}
-                product={bike}
-                ontileclick={handleTileClick}>
-            </c-tile>
+            <c-tile key={bike.fields.Id.value} product={bike} ontileclick={handleTileClick}></c-tile>
         </template>
     </div>
 </template>
