--- a/force-app/main/default/lwc/lwcRecordForm/lwcRecordForm.html
+++ b/force-app/main/default/lwc/lwcRecordForm/lwcRecordForm.html
@@ -1,10 +1,5 @@
 <template>
     <lightning-card title="Lightning Record Form">
-        <lightning-record-form
-        record-id={recordId}
-        object-api-name={objectApiName}
-        fields={fields}
-        columns="2">
-        </lightning-record-form>
+        <lightning-record-form record-id={recordId} object-api-name={objectApiName} fields={fields} columns="2"></lightning-record-form>
     </lightning-card>    
 </template>
