--- a/force-app/main/default/lwc/myTreeGrid/myTreeGrid.html
+++ b/force-app/main/default/lwc/myTreeGrid/myTreeGrid.html
@@ -1,9 +1,3 @@
 <template>
-    <lightning-tree-grid
-      columns={columns}
-      data={myData}
-      key-field="Id"
-      onrowaction={handleRowAction}
-    >
-    </lightning-tree-grid>
-  </template>
+    <lightning-tree-grid columns={columns} data={myData} key-field="Id" onrowaction={handleRowAction}></lightning-tree-grid>
+</template>
