--- a/force-app/main/default/lwc/recordFormStaticContact/recordFormStaticContact.html
+++ b/force-app/main/default/lwc/recordFormStaticContact/recordFormStaticContact.html
@@ -1,7 +1,3 @@
 <template>
-    <lightning-record-form
-      object-api-name={objectApiName}
-      record-id={recordId}
-      fields={fields}
-    ></lightning-record-form>
-  </template>
+    <lightning-record-form object-api-name={objectApiName} record-id={recordId} fields={fields}></lightning-record-form>
+</template>
