--- a/force-app/main/default/lwc/contactList/contactList.html
+++ b/force-app/main/default/lwc/contactList/contactList.html
@@ -1,9 +1,9 @@
 <template>
     <lightning-card>
-        <template if:true={contacts.data}>
+        <template lwc:if={contacts.data}>
             <lightning-datatable key-field="Id" data={contacts.data} columns={columns}></lightning-datatable>
         </template>
-        <template if:true={errors}>
+        <template lwc:if={errors}>
             <p>{errors}</p>
         </template>
     </lightning-card>
