--- a/force-app/main/default/lwc/displayContactsUsingImperative/displayContactsUsingImperative.html
+++ b/force-app/main/default/lwc/displayContactsUsingImperative/displayContactsUsingImperative.html
@@ -6,18 +6,22 @@
             </p>
             <template lwc:if={contacts}>
                 <table class="slds-table slds-table_cell-buffer slds-table_bordered">
-                    <tr>
-                        <td><b>Name</b></td>
-                        <td><b>Phone</b></td>
-                        <td><b>Account Name</b></td>
-                    </tr>
-                    <template for:each={contacts} for:item="contact">
-                        <tr key={contact.Id}>
-                            <td>{contact.Name}</td>
-                            <td>{contact.Phone}</td>
-                            <td>{contact.Account.Name}</td>
+                    <thead>
+                        <tr>
+                            <td><b>Name</b></td>
+                            <td><b>Phone</b></td>
+                            <td><b>Account Name</b></td>
                         </tr>
-                    </template>
+                    </thead>
+                    <tbody>
+                        <template for:each={contacts} for:item="contact">
+                            <tr key={contact.Id}>
+                                <td>{contact.Name}</td>
+                                <td>{contact.Phone}</td>
+                                <td>{contact.Account.Name}</td>
+                            </tr>
+                        </template>
+                    </tbody>
                 </table>
             </template>
         </div>
